# nbody-demo-2023

./: .gitignore  run.sh  run_slurm.sh  test_perf.sh
ver5/: Makefile
ver5_2sycl/: GSimulation.cpp  Makefile  main.cpp
ver5_all/: CMakeLists.txt  GSimulation.cpp  GSimulation.hpp  Makefile  Particle.hpp  main.cpp  types.hpp
ver5_all/programming_models/cpu/: Compute.cpp  GSimulation.cpp  GSimulation.hpp
ver5_all/programming_models/cuda/: Compute.cu
ver5_all/programming_models/hip/: Compute.cpp
ver5_all/programming_models/kokkos/: Compute.cpp  GSimulation.cpp  GSimulation.hpp
ver5_all/programming_models/opencl/: Compute.cpp  GSimulation.cpp
ver5_all/programming_models/openmp/: Compute.cpp  GSimulation.cpp
ver5_all/programming_models/sycl/: Compute.cpp  GSimulation.cpp
ver5_all/programming_models/sycl_usm/: Compute.cpp
ver5_clangykt/: GSimulation.cpp  GSimulation.hpp  Makefile  makefile.icx  nbody.x
ver5_kokkos/: GSimulation.cpp  Makefile  Particle.hpp
ver5_kokkos/programming_models/kokkos/: GSimulation.hpp
ver5_kokkos/programming_models/kokkos/cuda/: GSimulation.hpp
ver5_kokkos/programming_models/openmp/: GSimulation.cpp  GSimulation.hpp
ver5_mpi/: GSimulation.cpp  Makefile
ver5_opencl/: GSimulation.cpp  GSimulation.hpp  GSimulation.optrpt  Makefile  OCL.hpp  Particle.hpp  Particle_f.hpp  compute.hpp  main.cpp
ver5_openmp/: makefile  makefile.clangykt
ver5_openmp/ver5_clangykt/: GSimulation.cpp  makefile.xl
ver5_sycl/: GSimulation.cpp  GSimulation.hpp  Makefile  main.cpp  makefile.dpcpp
ver7/: Makefile
ver8/: Makefile
ver9/: GSimulation.cpp  Makefile
